# AirfoilBsplineMesher

./: .gitignore  CMakeLists.txt  README.md  mesh.cpp
SplineFitting/: drawResult.m  read_write_asc.cpp  spline_curve_fitting.cpp
